--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-scripts": "3.4.3",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "validator": "^13.1.1"
   },
   "scripts": {
